# Cardinal-Codex

./: .gitignore  ARCHITECTURE.md  BUILTIN_EFFECTS.md  Cargo.toml  DOCUMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  KEYWORDS_STATS_IMPLEMENTATION.md  README.md  README_DETAILED.md  SCHEMA_INTEGRATION.md  SCRIPTING_GUIDE.md  demo2.ccpack  rules.toml
.github/: copilot-instructions.md  plan-hybridRhaiCardSystem.prompt.md
cards/: README.md  bloated_toad.toml  fireball.toml  goblin_scout.toml  inspiration.toml  knight_of_valor.toml
crates/cardinal/: Cargo.toml  README.md  explanation.md  layout.md
crates/cardinal-cli/: Cargo.toml  README.md
crates/cardinal-cli/src/: main.rs
crates/cardinal/src/: compile.rs  display.rs  error.rs  ids.rs  lib.rs  testing.rs  validation.rs
crates/cardinal/src/engine/: cards.rs  core.rs  effect_executor.rs  events.rs  init.rs  legality.rs  mod.rs  reducer.rs  scripting.rs  triggers.rs
crates/cardinal/src/model/: action.rs  card.rs  choice.rs  command.rs  event.rs  mod.rs
crates/cardinal/src/pack/: builder.rs  loader.rs  metadata.rs  mod.rs
crates/cardinal/src/rules/: card_loader.rs  mod.rs  query.rs  schema.rs
crates/cardinal/src/state/: gamestate.rs  mod.rs  zones.rs
crates/cardinal/src/util/: log.rs  mod.rs  rng.rs
crates/cardinal/tests/: integration.rs
crates/test-game/: Cargo.toml  README.md  rules.toml
docs/: CLI_USAGE_GUIDE.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  FRONTEND_INTEGRATION.md  PACK_SYSTEM.md  SCRIPTING_GUIDE.md  VSCODE_VALIDATION.md
examples/: advanced_cards.toml  builtin_effects_showcase.toml  cards_with_keywords.toml  core.ccpack  example-pack.ccpack  hybrid_cards.toml  invalid_card_example.toml  starter-set.ccpack
examples/cards/: lightning_bolt.toml
examples/example-pack/: pack.toml
examples/scripts/: README.md  advanced_examples.rhai  arcane_transmuter.rhai  essence_drain.rhai  mana_ritual.rhai  mill_storm.rhai  mystic_bolt.rhai  (+4 more)
issues/: 1
schemas/: README.md  card.schema.json  cards.schema.json  pack.schema.json  rules.schema.json
test-game/: Cargo.toml  README.md  rules.toml
(+12 files in other folders)
