[package]
name = "cardinal-cli"
version = "0.0.11"
edition = "2024"
description = "Command-line interface for Cardinal Kernel."
license-file = "../../LICENSE"
readme = "README.md"
repository = "https://github.com/Big-Sky-Tech/Cardinal-Codex"
homepage = "https://github.com/Big-Sky-Tech/Cardinal-Codex"
documentation = "https://docs.rs/cardinal-cli"

[dependencies]
cardinal = { path = "../cardinal", package = "cardinal-kernel", version = "0.1.1" }
clap = { version = "4.5", features = ["derive"] }