[package]
name = "cardinal"
version = "0.1.0"
edition = "2024"
[lib]
path = "src/lib.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
rand = "0.8"
rand_pcg = "0.3"
colored = "2.0"
rhai = { version = "1.20", features = ["sync", "only_i32", "no_float"], default-features = false }
