[package]
name = "cardinal-kernel"
version = "0.1.1"
edition = "2024"
description = "Headless, deterministic rules engine for turn-based, TCG-like games."
license-file = "../../LICENSE"
readme = "README.md"
repository = "https://github.com/Big-Sky-Tech/Cardinal-Codex"
homepage = "https://github.com/Big-Sky-Tech/Cardinal-Codex"
documentation = "https://docs.rs/cardinal-kernel"
[lib]
path = "src/lib.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
rand = "0.8"
rand_pcg = "0.3"
colored = "2.0"
rhai = { version = "1.20", features = ["sync", "only_i32", "no_float"], default-features = false }
walkdir = "2.5"
tar = "0.4"
zstd = "0.13"
sha2 = "0.10"
anyhow = "1.0"
